# Anime-Database-Organizer

./: .gitignore  README.md  TODO.md  animes.db  animes.db-journal  animes_database.py  comandos_ejecutar.txt  db_create.sh  ejecutar_organizador.bat  ejecutar_organizador.sh  lista de animes actualización.xlsx  privacy_policy.txt  rename_anime.sh  run.bat  run.sh  ruta terminal ubuntu.txt  start.sh  terms_conditions.txt
app anime/: README.md  ai_models.py  anime_organizer.py  character_detector.py  config.py  filter_utils.py  gui.py  gui_app.py  install_env.py  mal_api.py  organizer_core.py  pyproject.toml  rename_tool.py  requirements.txt  setup_and_run.py  test.xlsx  vector_index.py
old/: anime_organizer.py  gui.py
